--- a/package.json
+++ b/package.json
@@ -25,8 +25,14 @@
         "postcss": "^8.4.6",
         "postcss-import": "^14.0.2",
         "tailwindcss": "^3.0.18",
+        "unplugin-auto-import": "^0.7.1",
+        "unplugin-vue-components": "^0.19.3",
         "vue": "^3.2.31",
         "vue-loader": "^17.0.0",
         "webpack-node-externals": "^3.0.0"
+    },
+    "dependencies": {
+        "browser-sync": "^2.27.9",
+        "element-plus": "^2.1.11"
     }
 }
